# CurlHandle

./: .gitattributes  .gitignore  .gitmodules  COPYING  Makefile  Makefile.am  Makefile.in  README.md  Readme.md  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.ac  configure.scan  libtool  missing
.github/: dependabot.yml
.github/workflows/: codeql.yml
CURLHandleSource/: CURLFTPSession.h  CURLFTPSession.m  CURLFTPSession.m.patch
CURLHandleSource/CURLHandle.xcodeproj/: project.pbxproj
CURLHandleSource/CURLHandle.xcodeproj/xcshareddata/xcschemes/: CURLHandle.xcscheme  libcares-clean.xcscheme  libcares-i386.xcscheme  libcares-x86_64.xcscheme  libcares.xcscheme  libcurl-clean.xcscheme  libcurl-i386.xcscheme  libcurl-x86_64.xcscheme  libcurl.xcscheme
CURLHandleTesterSource/: Info.plist
CURLHandleTesterSource/CURLHandleTester.xcodeproj/: project.pbxproj
Documentation/: Documentation.helpindex
build-aux/: .gitattributes
m4/: EbgMacOSXOptions.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
